Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero reiciendis, nobis officia tempore quisquam accusantium veniam doloribus sit voluptates debitis perferendis vero, aliquid rem ducimus nesciunt qui eveniet illo nostrum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui molestiae quibusdam nulla error dolorum ducimus accusamus placeat est quis dolor ipsa, minus ad voluptatem, cupiditate soluta nesciunt at dolores distinctio!</p>
 </body>
 </html>
